update i18n + sql scripts

--- a/mamikoFrontEnd/src/assets/i18n/en.json
+++ b/mamikoFrontEnd/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "home": "Home",
-  "title": "Mamiko",
+  "title": "Benjamin&Franklin",
   "heroesList": "Heroes list",
   "angularExampleApp": "Angular Example App",
   "language": "Language",
