--- a/mamikoFrontEnd/src/assets/i18n/es.json
+++ b/mamikoFrontEnd/src/assets/i18n/es.json
@@ -1,5 +1,6 @@
 {
   "home": "Inicio",
+  "title": "Benjamin&Franklin",
   "heroesList": "Lista de heroes",
   "angularExampleApp": "Angular aplicación de ejemplo",
   "language": "Idioma",
