--- a/mamikoFrontEnd/src/assets/i18n/fr.json
+++ b/mamikoFrontEnd/src/assets/i18n/fr.json
@@ -1,6 +1,6 @@
 {
   "home": "Accueil",
-  "title": "Mamiko",
+  "title": "Benjamin&Franklin",
   "heroesList": "Liste des héros",
   "angularExampleApp": "Angular Example App",
   "language": "Language",
