--- a/mamikoFrontEnd/src/assets/i18n/pt-br.json
+++ b/mamikoFrontEnd/src/assets/i18n/pt-br.json
@@ -1,5 +1,6 @@
 {
   "home": "Inicio",
+  "title": "Benjamin&Franklin",
   "heroesList": "Lista de heróis",
   "angularExampleApp": "Aplicação exemplo de angular",
   "language": "Idioma",
